--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "inkscape-beamer-frames",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "src/newFrames.ts",
   "repository": "https://github.com/heitzlki/inkscape-beamer-frames.git",
   "author": "heitzlki",
   "license": "MIT",
+  "scripts": {
+    "new-frames": "ts-node src/newFrames.ts",
+    "gen-frames": "ts-node src/genFrames.ts"
+  },
   "dependencies": {
     "@types/xml2json": "^0.11.3",
     "chalk": "^4.1.0",
