--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "fs": "^0.0.1-security",
     "glob": "^7.1.6",
     "path": "^0.12.7",
+    "traverse": "^0.6.6",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/node": "^14.14.31",
+    "@types/traverse": "^0.6.32",
     "typescript": "^4.2.2"
   }
 }
